--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,10 +32,8 @@
             <a href="{% url 'post_new' %}" class="top-menu"><h5>new post   <span class="glyphicon glyphicon-plus"></span></h5></a>
             <h1><a href="/">Nakajima Channels</a></h1><h5>ナカジマチャンネル</h5>
         </div>
-        <div class="content container"><a href="{% url 'post_list' %}"> << ナカジマチャンネルのトップへ</a></div>
-        <!-- 検索ボタン -->
-        <div class="content container">
-            <a href="{% url 'search_post' %}" class="search-button"><<検索画面へ</a></div>
+        <!-- <div class="content container">
+            <a href="{% url 'search_post' %}" class="search-button"><<検索画面へ</a></div> -->
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
