--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -29,7 +29,7 @@
         <section class="hero">
             <div class="container">
                 <p>つながる、育てる、中島ナビ</p>
-                <a href="{% url 'post_list' %}" class="btn">チャットを使ってみる</a>
+                <a href="{% url 'search_post' %}" class="btn">チャットを使ってみる</a>
             </div>
         </section>
 
@@ -38,7 +38,7 @@
                 <h2>サービス紹介</h2>
                 <div class="service-list">
                     <div class="service-item">
-                        <a href="{% url 'post_list' %}"><h3>掲示板</h3></a>
+                        <a href="{% url 'search_post' %}"><h3>掲示板</h3></a>
                         <p>住民の皆さんが相談できるチャット機能です。安心して相談できる機能を実装していきます。</p>
                     </div>
                     <div class="service-item">
