--- a/poopgame/templates/poopgame/home.html
+++ b/poopgame/templates/poopgame/home.html
@@ -47,14 +47,15 @@
     </div>
 
     <div class="poop-decoration">
-      <img src="{% static 'poopgame/img/poop-smile.png' %}" alt="にこにこうんこ" class="floating-poop">
+      <img src="{% static 'poopgame/img/podium3.png' %}" alt="悲しいうんこ" class="floating-poop">
       <img src="{% static 'poopgame/img/poop-wink.png' %}" alt="ウィンクうんこ" class="floating-poop">
       <img src="{% static 'poopgame/img/poop-dance.png' %}" alt="踊るうんこ" class="floating-poop poop-dance">
     </div>
     <div>
       【更新情報】<br>
-      250514 : ボーナスステージ追加。
-      250515 : たしざん、ひきざんにレベル追加
+      250514 : ボーナスステージ追加。<br>
+      250515 : たしざん、ひきざんにレベル追加<br>
+      250525 : 掛け算レベル調整
     </div>
   </main>
 
